# hangman

./: hangman.cabal
src/: Hangman.hs  Main.hs
tests/: tests.hs
