name:                hangman
version:             0.1.0.0
homepage:            https://github.com/githubuser/hangman#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2022 Author name here
category:            Web
build-type:          Simple
cabal-version:       >= 1.10
extra-source-files:  data/dict.txt

library
  hs-source-dirs:   src
  exposed-modules:  Hangman
  default-language: Haskell2010
  build-depends:    base >= 4.7 && < 5
                  , random
                  , split

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Hangman
  build-depends:       base >= 4.7 && < 5
                     , hangman
                     , random

test-suite tests
  type:             exitcode-stdio-1.0
  main-is:          tests.hs
  hs-source-dirs:   tests
  build-depends:    base >= 4.7 && < 5
                  , hspec
                  , hangman
  default-language: Haskell2010
